--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Annlix/awesome-dynamic-form.git"
   },
   "keywords": [
-    "vue;dynamic-form;antdesign;bootstrap;element;form"
+    "vue","dynamic-form","antdesign","bootstrap","element","form"
   ],
   "author": "Annlix",
   "license": "SEE LICENSE IN LICENSE",
