--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "vue","dynamic-form","antdesign","bootstrap","element","form"
   ],
   "author": "Annlix",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "MulanPSL",
   "bugs": {
     "url": "https://github.com/Annlix/awesome-dynamic-form/issues"
   },
